[gd_scene load_steps=17 format=3 uid="uid://djfqq3hsgk8w4"]

[ext_resource type="Script" path="res://scripts/player_character.gd" id="1_qhbey"]
[ext_resource type="Script" path="res://scripts/Head.gd" id="2_lvxga"]
[ext_resource type="Script" path="res://scripts/Guns.gd" id="3_2avmf"]
[ext_resource type="PackedScene" uid="uid://23n5dfgehx50" path="res://scenes/GunArm.tscn" id="5_atse1"]
[ext_resource type="FontFile" uid="uid://fhh5huedyra5" path="res://assets/Fonts/DivineLight.woff" id="6_xhatj"]
[ext_resource type="AudioStream" uid="uid://22g44jgpkrs5" path="res://assets/audio/Jelly_Step_Smol.mp3" id="9_6uaaa"]
[ext_resource type="AudioStream" uid="uid://df1ym7eva6o0a" path="res://assets/audio/Fire.mp3" id="9_nmi8n"]
[ext_resource type="Shader" path="res://scripts/shaders/heart.gdshader" id="9_qkym3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fi26c"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_b45a5"]

[sub_resource type="Animation" id="Animation_fpluh"]
length = 0.001

[sub_resource type="Animation" id="Animation_8aspr"]
resource_name = "RevolverFire1"

[sub_resource type="Animation" id="Animation_w0d15"]
resource_name = "RevolverFire2"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jebfa"]
_data = {
"RESET": SubResource("Animation_fpluh"),
"RevolverFire1": SubResource("Animation_8aspr"),
"RevolverFire2": SubResource("Animation_w0d15")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5yovy"]
shader = ExtResource("9_qkym3")
shader_parameter/brightness = 1.0
shader_parameter/contrast = 1.0
shader_parameter/saturation = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dxgvg"]
shader = ExtResource("9_qkym3")
shader_parameter/brightness = 1.0
shader_parameter/contrast = 6.902
shader_parameter/saturation = 0.914

[node name="PlayerCharacter" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_qhbey")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_fi26c")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
layers = 2
mesh = SubResource("CapsuleMesh_b45a5")

[node name="Body" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.72367, 0)
script = ExtResource("2_lvxga")

[node name="Head" type="Node3D" parent="Body"]

[node name="Camera3D" type="Camera3D" parent="Body/Head"]

[node name="GunRay" type="RayCast3D" parent="Body/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0026871)
target_position = Vector3(0, 0, -1000)
collision_mask = 16
collide_with_areas = true

[node name="Guns" type="Node3D" parent="Body/Head"]
script = ExtResource("3_2avmf")

[node name="Gun1" parent="Body/Head/Guns" instance=ExtResource("5_atse1")]
transform = Transform3D(-0.1, 0, 2.53518e-07, 0, 0.1, 0, -2.53518e-07, 0, -0.1, -0.004, -0.405, 0.095)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jebfa")
}

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Hud" type="Node2D" parent="HUD"]

[node name="Health" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -546.0
offset_top = 280.0
offset_right = -106.0
offset_bottom = 364.0
grow_horizontal = 2
rotation = -0.697608
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_xhatj")
theme_override_font_sizes/font_size = 80
text = "Health: 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubViewport" type="SubViewport" parent="HUD"]
size = Vector2i(1024, 1024)

[node name="ColorRect" type="ColorRect" parent="HUD/SubViewport"]
visible = false
material = SubResource("ShaderMaterial_5yovy")
offset_right = 1024.0
offset_bottom = 1024.0
color = Color(1, 0.137255, 0.0823529, 1)

[node name="FleshPort" type="SubViewport" parent="HUD"]
size = Vector2i(1024, 1024)

[node name="ColorRect" type="ColorRect" parent="HUD/FleshPort"]
visible = false
material = SubResource("ShaderMaterial_dxgvg")
offset_right = 1024.0
offset_bottom = 1024.0
color = Color(1, 0.137255, 0.0823529, 1)

[node name="ColorRect" type="ColorRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -0.5
offset_right = 0.5
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Gunshot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_nmi8n")

[node name="Footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_6uaaa")
volume_db = -10.0

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
